kubernetes/apps/flux-system/headlamp/app/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: kubernetes-dashboard.png
    gethomepage.dev/name: Headlamp
    gethomepage.dev/group: System
spec:
  hostnames: ["headlamp.chestr.dev"]
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: headlamp
          namespace: flux-system
          port: 80
